--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0 auto;
+  height: 100%;
+}
+html {
+  height: 100dvh;
+  width: 100dvw;
+  margin: 0 auto;
+  padding: 0;
+}
